--- a/css/custom.css
+++ b/css/custom.css
@@ -26,3 +26,14 @@ cursor {
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
+
+.project {
+    border: 2px solid grey;
+    border-radius: 5px;
+    padding: 0px;
+}
+
+h3 {
+    text-align: center;
+    margin: 5px;
+}
