--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,54 @@
+container {
+    margin: 0 auto;
+    width: 100%;
+    justify-content: center;
+}
+
+row {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.col-1 { width: 8.333%; }
+
+.col-2 { width: 16.667%; }
+
+.col-3 { width: 25%; }
+
+.col-4 { width: 33.333%; }
+
+.col-5 { width: 41.667%; }
+
+.col-6 { width: 50%; }
+
+.col-7 { width: 58.333%; }
+
+.col-8 { width: 66.667%; }
+
+.col-9 { width: 75%; }
+
+.col-10 { width: 83.333%; }
+
+.col-11 { width: 91.667%; }
+
+.col-12 { width: 100%; }
+
+@media screen and (max-width: 425px) {
+    .col-4, .col-8 { width: 100%; }
+}
+
+h3 {
+    text-align: center;
+    margin: 5px;
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
+}
+
 .logo {
     background-color: black;
     color: grey;
@@ -28,12 +79,9 @@ cursor {
 }
 
 .project {
-    border: 2px solid grey;
+    border: 3px solid grey;
     border-radius: 5px;
-    padding: 0px;
-}
-
-h3 {
-    text-align: center;
-    margin: 5px;
+    box-sizing: border-box;
+    width: 45%;
+    margin: auto;
 }
