--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,19 @@
+body {
+    margin: 0;
+    font-family: 'Inconsolata', monospace;
+    background-color: grey;
+}
+
 container {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
     margin: 0 auto;
     width: 100%;
+    max-width: 1200px;
     justify-content: center;
+    background-color: white;
 }
 
 row {
@@ -35,6 +47,7 @@ row {
 
 .col-12 { width: 100%; }
 
+/* Changes for phones */
 @media screen and (max-width: 425px) {
     .col-4, .col-8 { width: 100%; }
 }
@@ -49,10 +62,16 @@ img {
     object-fit: cover;
 }
 
+p {
+    padding: 10px;
+}
+
 .logo {
     background-color: black;
     color: grey;
     font-family: 'Inconsolata', monospace;
+    width: 100%;
+    padding: 10px;
 }
 
 @-webkit-keyframes blink {
@@ -84,4 +103,6 @@ cursor {
     box-sizing: border-box;
     width: 45%;
     margin: auto;
+    margin-bottom: 20px;
+    background: grey;
 }
